# Analysis_of_iMDB_2024_Statistics

./: LICENSE  LICENSE.txt  README.md  TUTORIAL.ipynb
Analysis_of_iMDB_2024_Statistics/: IMDb2024.csv  pyproject.toml
Analysis_of_iMDB_2024_Statistics/actor_analysis/: __init__.py  visualization.py
actor_analysis/: analysis.py  data_processing.py  visualization.py
