[project]
name = "actor_analysis"
version = "0.1.0"
description = "A Python package for analyzing and visualizing actor performance based on IMDb data."
authors = [
    { name="Uras Felamur and Zeynep Kucukfalay" }
]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "matplotlib",
    "seaborn"
]

[tool.setuptools]
packages = ["actor_analysis"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
